--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -76,3 +76,27 @@ stages:
         notifyUsers: user@example.com
         instructions: 'Please validate the build configuration and resume'
         onTimeout: 'resume'
+- stage: DeployToAlternateProduction
+  displayName: 'Deploy to Alternate Production'
+  condition: succeeded()
+  trigger: manual
+  jobs:
+  - job: DeployAlternateProductionJob
+    displayName: 'Deploy to Alternate Production Job'
+    steps:
+    - script: |
+        echo "Deploying to alternate production..."
+        # Add your deployment commands here
+      displayName: 'Run deployment commands'
+
+- stage: Rollback
+  displayName: 'Rollback Stage'
+  trigger: manual
+  jobs:
+  - job: RollbackJob
+    displayName: 'Rollback Job'
+    steps:
+    - script: |
+        echo "Rolling back the deployment..."
+        # Add your rollback commands here
+      displayName: 'Run rollback commands'
